{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Game",
            "id": "0737c800-3afc-4794-ad43-f8d3958fa75f",
            "actions": [
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "4f24feec-6688-4326-95b8-ebbc412ced1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftHold",
                    "type": "Button",
                    "id": "9c5f351b-123b-4ad4-99b3-1703f801472c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera Movement",
                    "type": "PassThrough",
                    "id": "a9410ebb-4cc7-455b-9a36-e0e66d85f6a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera Rotation",
                    "type": "Button",
                    "id": "61d1617c-07c6-4cc9-91ce-4e35369c4203",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera Center",
                    "type": "Button",
                    "id": "dc2ca71d-9b7c-4b83-bb1d-d87632f4d2fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera Zoom",
                    "type": "Value",
                    "id": "b9b4b959-c949-4c61-b2e4-aace95054937",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "3c7f2071-43b2-4c7b-9c4f-870c112e862a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Equipment",
                    "type": "Button",
                    "id": "92c1cb3c-4341-4d12-967d-c5b789f59eec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "7be2995c-abac-42e4-beb1-f38316a04fee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "3d3a9357-bdad-4b92-bc7c-3a32bfb5f00c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionItems",
                    "type": "Button",
                    "id": "1ed18497-2129-4f9d-9982-e4ce72049f4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowItem",
                    "type": "Button",
                    "id": "b654094e-2668-4df9-ac83-0ba380c85d46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "2c796e4f-8876-44b1-a2a4-9e6bba0f2a9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e6a6d94-3ba2-4c82-8a80-c695340d1b3e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86433340-2056-4d4c-8bef-79b3a3091a64",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "83b87409-4391-4647-9ad9-133402ffe73f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f7359bb3-f26a-4331-911c-ab5ae07dc47a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0f59e96f-4f65-4540-8c0e-073d51d499a7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c4d07014-5445-4d8f-992c-42b911f06d76",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b5ecce93-3d12-4b23-bb12-5072654392e1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "1cbd1e2f-fd61-4ac4-9b42-01693d6039a3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fbc687d0-f9ce-42a3-b658-34f09beeae56",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "51b0119e-c4eb-4dd1-bb6e-57ebb4b43f28",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "53cc8910-8145-4c8c-9b44-c10906edb3a3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Center",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec32c19b-cb24-4717-819e-7823c09e8f38",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f66866fa-b464-4a28-a993-ccf7d2a6316b",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e674059-71c1-4639-96bf-3edacc01be0e",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equipment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed6b9c23-6f07-4c02-bdbb-92d47b968d34",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd32337d-813c-418d-9675-102e4c82ca17",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83788473-3034-4765-94a3-630d2b87c4b6",
                    "path": "<Keyboard>/#(1)",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6552ad3d-252f-4107-b267-284b9e64d661",
                    "path": "<Keyboard>/#(2)",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95cf91e7-455b-4fba-b66c-eef4ae242e67",
                    "path": "<Keyboard>/#(3)",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60fa98fe-5332-4356-a2b7-db3bbb36194e",
                    "path": "<Keyboard>/#(4)",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6781c5f2-b884-4df0-9f69-01d55494ada9",
                    "path": "<Keyboard>/#(5)",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31c6c5a8-a703-41a9-9f43-09bd4a926e2e",
                    "path": "<Keyboard>/#(6)",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "632ca303-7281-44e6-819e-64918bac64f7",
                    "path": "<Keyboard>/#(7)",
                    "interactions": "",
                    "processors": "Scale(factor=7)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74af9b35-82bd-4aa5-8d09-30db9bca554b",
                    "path": "<Keyboard>/#(8)",
                    "interactions": "",
                    "processors": "Scale(factor=8)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d83f4564-4ff7-4790-821d-063ab4c408fa",
                    "path": "<Keyboard>/#(9)",
                    "interactions": "",
                    "processors": "Scale(factor=9)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "072c1a59-fbf5-46aa-98bf-68a8868e254d",
                    "path": "<Keyboard>/#(0)",
                    "interactions": "",
                    "processors": "Scale(factor=10)",
                    "groups": "",
                    "action": "ActionItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2cea064-d1f9-4e80-9b4f-58c375cf70ee",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ace92ae7-ea66-4cf9-9bc6-8989aed53c33",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "88984102-ab3d-496e-bb1f-56c14abe62f0",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "5897d701-39cf-40cd-a8d7-fc59ceb90615",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08f0779e-75b2-488f-a94c-18a566a2b313",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}